...
                            <constraint firstItem="O9W-KD-4bM" firstAttribute="trailing" secondItem="5hJ-p5-VIt" secondAttribute="trailing" id="CBh-Ku-YSd"/>
                            <constraint firstItem="O9W-KD-4bM" firstAttribute="leading" secondItem="5hJ-p5-VIt" secondAttribute="leading" id="Jb2-BO-6RK"/>
                            <constraint firstItem="O9W-KD-4bM" firstAttribute="bottom" secondItem="5hJ-p5-VIt" secondAttribute="bottom" id="gsC-sj-YbO"/>
                            <constraint firstItem="O9W-KD-4bM" firstAttribute="top" secondItem="5hJ-p5-VIt" secondAttribute="top" id="yNq-c5-5Zm"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Login" id="0SL-xn-1av">
                        <barButtonItem key="rightBarButtonItem" title="Login" style="done" id="qWl-yU-MOI">
                            <connections>
                                <action selector="login:" destination="rQk-Nn-pwW" id="96e-q2-3Cr"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <constraint firstItem="5CN-xh-wj9" firstAttribute="top" secondItem="YVY-x8-I8n" secondAttribute="top" id="6DX-ZR-m04"/>
                            <constraint firstItem="5CN-xh-wj9" firstAttribute="trailing" secondItem="YVY-x8-I8n" secondAttribute="trailing" id="aQk-hX-Var"/>
                            <constraint firstItem="5CN-xh-wj9" firstAttribute="bottom" secondItem="YVY-x8-I8n" secondAttribute="bottom" id="o0O-MU-i62"/>
                            <constraint firstItem="5CN-xh-wj9" firstAttribute="leading" secondItem="YVY-x8-I8n" secondAttribute="leading" id="z1k-IU-3UZ"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="DQM-U9-EAQ"/>
                    <connections>
                        <segue destination="xRL-jh-7NF" kind="show" identifier="showPolicies" id="05c-QG-pek"/>
                        <segue destination="g9R-Zw-mJf" kind="presentation" identifier="showWelcomeVC" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="zBz-k7-fJt"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="V4u-LE-NZL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
            <point key="canvasLocation" x="4658" y="-788"/>
        </scene>
        <!--Stats.-->
        <scene sceneID="ovH-ew-YDN">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cXX-Gr-qGS" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Stats." image="chart.bar" catalog="system" id="AiT-um-oFN"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="1Df-8i-aQV">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
